feat: region resource
